nav bar update and scrollbar fix

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -53,7 +53,3 @@ div
 {
   border-width: 0px;
 }
-body
-{
-  overflow: hidden;
-}
